unpackaged/main/default/objects/FSLClearQueuedCall__c/FSLClearQueuedCall__c.object-meta.xml
<CustomObject>
    <label>FSL Clear Queued Call</label>
    <nameField>
        <label>FSLClearQueuedCall Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL Clear Queued Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>