unpackaged/main/default/objects/FSLClearQueuedCall__c/fields/Created_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Created_Timestamp__c</fullName>
    <description>The time at which this record was created.  it is the time when the Call was marked ready for CLEARing</description>
    <label>Created Timestamp</label>
    <type>DateTime</type>
</CustomField>