unpackaged/main/default/objects/FSLClearQueuedCall__c/fields/Last_Updated_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Timestamp__c</fullName>
    <description>The last time this record was updated</description>
    <label>Last Updated Timestamp</label>
    <type>DateTime</type>
</CustomField>