unpackaged/main/default/objects/FSLClearQueuedCall__c/fields/Mileage_Received__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Received__c</fullName>
    <description>Indicates if Mileage has been received for the Service Appointments associated with this call.
Pending - No mileages received, Partial - One of two mileage values received, Complete - all mileage values are received</description>
    <label>Mileage Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>