unpackaged/main/default/objects/FSLClearQueuedCall__c/fields/Mileage_Received_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Received_Timestamp__c</fullName>
    <description>Timestamp at the instance when a Mileage is received. For a call associated with two SAs, the Mileage Received flag indcates if this time applies to the first call or the second</description>
    <label>Mileage Received Timestamp</label>
    <type>DateTime</type>
</CustomField>