unpackaged/main/default/objects/FSLClearQueuedCall__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Number of times a CLEAR request was attempted. Initial value is set at 0</description>
    <label>Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>