unpackaged/main/default/objects/FSLClearQueuedCall__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Indicates if the call is ready to be cleared or waiting for Glympse mileage information or if there was an error in clearing it</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Cleared With Mileage</fullName>
            </value>
            <value>
                <fullName>Cleared Without Mileage</fullName>
            </value>
            <value>
                <fullName>Case Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>