unpackaged/main/default/objects/FSLClearQueuedCall__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The work order associated with the call, which needs to be cleared</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>FSL Clear Queued Calls</relationshipLabel>
    <relationshipName>ClearQueuedCalls</relationshipName>
    <type>Lookup</type>
</CustomField>