unpackaged/main/default/objects/FSLClearQueuedCall__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Retry_Count__c</columns>
    <columns>State__c</columns>
    <columns>Mileage_Received__c</columns>
    <columns>Mileage_Received_Timestamp__c</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>7/5/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>