unpackaged/main/default/objects/FSLClearQueuedCall__c/listViews/Clear_Failures.listView-meta.xml
<ListView>
    <fullName>Clear_Failures</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Retry_Count__c</columns>
    <columns>State__c</columns>
    <columns>Mileage_Received__c</columns>
    <columns>Mileage_Received_Timestamp__c</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Case Created</value>
    </filters>
    <label>Clear Failures - Case Created</label>
</ListView>