unpackaged/main/default/objects/FSLClearQueuedCall__c/listViews/JD.listView-meta.xml
<ListView>
    <fullName>JD</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Retry_Count__c</columns>
    <columns>State__c</columns>
    <columns>Mileage_Received__c</columns>
    <columns>Mileage_Received_Timestamp__c</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>JD</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>