unpackaged/main/default/objects/FSLClearQueuedCall__c/listViews/Pending_Clears.listView-meta.xml
<ListView>
    <fullName>Pending_Clears</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Retry_Count__c</columns>
    <columns>State__c</columns>
    <columns>Mileage_Received__c</columns>
    <columns>Mileage_Received_Timestamp__c</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Pending,In Progress,Cleared With Mileage,Cleared Without Mileage,Case Created</value>
    </filters>
    <label>Pending Clears</label>
</ListView>