unpackaged/main/default/objects/FSLClearQueuedCall__c/listViews/Prior_Day_Cleared_Cases.listView-meta.xml
<ListView>
    <fullName>Prior_Day_Cleared_Cases</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Retry_Count__c</columns>
    <columns>State__c</columns>
    <columns>Mileage_Received__c</columns>
    <columns>Mileage_Received_Timestamp__c</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Cleared With Mileage,Cleared Without Mileage,Case Created</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>11/2/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Work_Order__c</field>
        <operation>equals</operation>
        <value>03504472</value>
    </filters>
    <label>Prior Day Cleared &amp; Cases</label>
</ListView>