unpackaged/main/default/objects/FSLClearQueuedCall__c/listViews/Today_s_Completed_Clear_Queue.listView-meta.xml
<ListView>
    <fullName>Today_s_Completed_Clear_Queue</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Retry_Count__c</columns>
    <columns>State__c</columns>
    <columns>Mileage_Received__c</columns>
    <columns>Mileage_Received_Timestamp__c</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Cleared With Mileage,Cleared Without Mileage</value>
    </filters>
    <label>Today&#39;s Completed Clear Queue</label>
</ListView>